first functional version

--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -26,13 +26,12 @@ a:hover {
 
 html,
 body {
-  height: 100%;
-  background-color: #333;
+  height: 100%
 }
 body {
-  color: #fff;
+
   text-align: center;
-  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -119,9 +118,7 @@ body {
  * Footer
  */
 
-.mastfoot {
-  color: rgba(255,255,255,.5);
-}
+
 
 
 /*
