--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,11 +1,31 @@
 doctype html
 html
   head
-    title= title
+    title= "CloudBleedCheck"
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/cover.css')
     link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous")
+
+    link(rel='author', href='https://twitter.com/avatsaev/')
+
+    link(rel='image_src', href='http://i.imgur.com/qNxNDiZ.png')
+    meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
+    meta(property='og:image', content='http://i.imgur.com/qNxNDiZ.png')
+    meta(property='og:url', content='https://cloudbleedcheck.com')
+    meta(property='og:title', content='CloudBleedCheck - cloudbleedcheck.com')
+    meta(property='og:type', content='website')
+    meta(property='og:description', content='Check if a domain is affected by CloudBleed bug')
+    meta(name='description', content='Check if a domain is affected by CloudBleed bug')
+    meta(name='keywords', content='Cloudbleed, cloudbleed checker, cloudflare, cloudflare leaks, cloudflare bug, avatsaev')
+
+
+
+
+
+
+
+
 
   body
     block content
