added image preview

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,9 +9,9 @@ html
 
     link(rel='author', href='https://twitter.com/avatsaev/')
 
-    link(rel='image_src', href='http://i.imgur.com/qNxNDiZ.png')
+    link(rel='image_src', href='/images/preview.png')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
-    meta(property='og:image', content='http://i.imgur.com/qNxNDiZ.png')
+    meta(property='og:image', content='/images/preview.png')
     meta(property='og:url', content='https://cloudbleedcheck.com')
     meta(property='og:title', content='CloudBleedCheck - cloudbleedcheck.com')
     meta(property='og:type', content='website')
