--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
       .cover-container
         .masthead.clearfix
           .inner
-            a(href="https://cloudbleedcheck.com")
+            a(href="http://cloudbleedcheck.com")
               h3.masthead-brand CloudBleedCheck
         .inner.cover.center(style="margin: 0 auto; text-align: center")
           h1.cover-heading CloudBleedCheck allows you to check if a domain name is affected by CloudBleed bug.
