more robust url check

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,7 +21,7 @@ block content
 
             .col-md-12.center
               form
-                input#domain-input.form-control.form-control-lg(type='text', placeholder='example.com')
+                input#domain-input.form-control.form-control-lg(type='url', placeholder='example.com')
                 <br>
                 button#submit-button.btn.btn-secondary.btn-lg(style="cursor:pointer")
                   | CHECK
