--- a/public/stylesheets/cover.css
+++ b/public/stylesheets/cover.css
@@ -132,7 +132,7 @@ body {
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
   }
   /* Start the vertical centering */
