--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,4 +52,18 @@ body{
   font-size: 19px;
   font-weight: bold;
   text-decoration: underline;
+
+}
+.domain-result-list{
+  max-height: 200px;
+  overflow-y: scroll;
+}
+.domain-result-list-item{
+
+  background-color: rgba(1,1,1,0.3);
+  border-radius: 10px;
+  font-size: 12px;
+  font-weight: 300;
+  padding: 5px;
+
 }
