--- a/views/index.pug
+++ b/views/index.pug
@@ -6,9 +6,9 @@ block content
       .cover-container
         .masthead.clearfix
           .inner
-            a(href="http://cloudbleedcheck.com")
+            a(href="https://cloudbleedcheck.com")
               h3.masthead-brand CloudBleedCheck
-        .inner.cover.center(style="margin: 0 auto; text-align: center")
+        .inner.cover
           h1.cover-heading CloudBleedCheck allows you to check if a domain name is affected by CloudBleed bug.
           p.lead
             | Database contains 4,287,625 entries of potentially affected domains.
